# C-Calculator

./: CMakeLists.txt  LICENSE  README.md
headers/: CommandMap.hpp  Errors.hpp  History.hpp  Log.hpp  Operations.hpp  Utils.hpp
headers/Utils/: CheckUtils.hpp  Constants.hpp  PrintUtils.hpp  RequestUtils.hpp  Utils.hpp
ico/: Win98calc.rc
src/: Calculator.cpp  CommandMap.cpp  History.cpp  Log.cpp  Operations.cpp  Utils.cpp
src/Utils/: CheckUtils.cpp  PrintUtils.cpp  RequestUtils.cpp  Utils.cpp
